--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^1.1.2
   google_mlkit_text_recognition: ^0.14.0
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
